--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,17 @@
-title: Your awesome title
-email: your-email@example.com
+title: Memorizable
 description: >-
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: ""
-url: ""
+  Memorizable helps thousands of students to be better at vocabulary. We make things Memorizable.
+baseurl: "/"
+url: "https://memorizable-app.github.io/site"
 
 # Build settings
 plugins:
   - jekyll-feed
 
+# Compile sass
 sass:
    sass_dir: bower_components/bootstrap/scss
 
-# Exclude from processing.
+# Exclude from processing
 exclude:
   - bower_components
